@@ -1,4 +1,9 @@
-2016-04-19  Paul Thomas  <pault@gcc.gnu.org>
+2016-11-05  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/67564
+	* gfortran.dg/select_type_39.f03: New test.
+
+2016-11-04  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/64933
 	* gfortran.dg/associate_23.f90: New test.
